--- a/coco/get_dataset.ipynb
+++ b/coco/get_dataset.ipynb
@@ -106,31 +106,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgs = coco.loadImgs(imgIds[:2000])"
+    "imgs = coco.loadImgs(imgIds[2000:5000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = []\n",
+    "for i in range(2000):\n",
+    "    ids.append(imgs[i]['coco_url'].split('/')[-1][:-4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2000/2000 [23:24<00:00,  1.42it/s]"
+      "100%|██████████| 3000/3000 [36:05<00:00,  1.39it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8min 8s, sys: 6.86 s, total: 8min 15s\n",
-      "Wall time: 23min 24s\n"
+      "CPU times: user 12min 46s, sys: 9.45 s, total: 12min 56s\n",
+      "Wall time: 36min 5s\n"
      ]
     },
     {
@@ -143,7 +154,7 @@
    ],
    "source": [
     "%%time\n",
-    "dest_folder = '../mask_tranfer_learning/'\n",
+    "dest_folder = '../mask_tranfer_learning/dataset/2/'\n",
     "for img in tqdm(imgs):\n",
     "    Image = io.imread(img['coco_url'])\n",
     "    annIds = coco.getAnnIds(imgIds=img['id'], catIds=catIds, iscrowd=None)\n",
@@ -154,8 +165,8 @@
     "        masks.append(coco.annToMask(ann))\n",
     "    Mask = np.sum(masks, 0).astype(bool)\n",
     "    \n",
-    "    img_path = dest_folder+ 'dataset/images/' + img['file_name']\n",
-    "    mask_path = dest_folder + 'dataset/masks/m_' + img['file_name']\n",
+    "    img_path = dest_folder+ '/images/' + img['file_name']\n",
+    "    mask_path = dest_folder + '/masks/m_' + img['file_name']\n",
     "    plt.imsave(img_path, Image)\n",
     "    plt.imsave(mask_path, Mask)"
    ]
